--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,7 @@
   ul, 
   ol {
     padding: 0 1rem;
-    margin: 1.25rem 1rem 1.25rem 0.4rem;
+    margin: 0.75rem 1rem 0.75rem 0.4rem;
     
     li p {
       margin-top: 0.25em;
@@ -42,14 +42,9 @@
   h5, 
   h6 {
     line-height: 1.1;
-    margin-top: 2.5rem;
+    margin-top: 1.5rem;
+    margin-bottom: 0.75rem;
     text-wrap: pretty;
-  }
-
-  h1, 
-  h2 {
-    margin-top: 3.5rem;
-    margin-bottom: 1.5rem;
   }
 
   h1 { 
@@ -70,6 +65,18 @@
     font-size: 1rem; 
   }
 
+  p {
+    margin: 0.5rem 0;
+  }
+
+  p.is-empty::before {
+    color: #adb5bd;
+    content: attr(data-placeholder);
+    float: left;
+    height: 0;
+    pointer-events: none;
+  }
+
   /* Code and preformatted text styles */
   code {
     background-color: var(--purple-light);
@@ -84,7 +91,7 @@
     border-radius: 0.5rem;
     color: var(--white);
     font-family: 'JetBrainsMono', monospace;
-    margin: 1.5rem 0;
+    margin: 0.75rem 0;
     padding: 0.75rem 1rem;
 
     code {
@@ -97,14 +104,14 @@
 
   blockquote {
     border-left: 3px solid var(--gray-3);
-    margin: 1.5rem 0;
+    margin: 0.75rem 0;
     padding-left: 1rem;
   }
 
   hr {
     border: none;
     border-top: 1px solid var(--gray-2);
-    margin: 2rem 0;
+    margin: 1rem 0;
   }
     
   /* Placeholder (at the top) */
@@ -115,18 +122,7 @@
     height: 0;
     pointer-events: none;
   }
-
-  /* Placeholder (on every new line) */
-  /* .is-empty::before {
-    color: var(--gray-4);
-    content: attr(data-placeholder);
-    float: left;
-    height: 0;
-    pointer-events: none;
-  } */
 }
-
-
 
 @layer base {
   :root {
